--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,8 @@
 <html>
 <head>
   <title><%= title %></title>
-  <%= stylesheet_link_tag :all %>
+  <%= render 'layouts/stylesheets' %>
+
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
