--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
 			<li><%= link_to "About", about_path %> </li>
 
 			<% if user_signed_in? %>
+				<li><%= link_to "Lists", lists_path %> </li>
 				<li><%= link_to "Sign out", destroy_user_session_path %></li>
 			<% else %>
 				<li><%= link_to "Sign in", new_user_session_path %> </li>
