--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,9 +3,11 @@
 
 <ul>
 <% @lists.each do |list| %>
-	<li><%= link_to list.name, list_path(list) %></li>
-	
+	<li><%= link_to list.name, list_path(list) %>
 	<%= link_to "delete", list, :method => :delete, :confirm => "you sure you want to delete the list?", :title => "Delete #{list.name}" %>
+	</li>
+	
+	
 <% end %>
 </ul>
 <%= will_paginate %>
