--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,25 @@
 <h1><%= @list.name %></h1>
 
-<%= link_to "edit", edit_list_path(@list) %>, 
+
 
 <p><%= @list.description %></p>
+<h3>To Do</h3>
+	<ul>
+		<% @list.todos.incomplete.each do |todo| %>
+			<li><%= todo.description %> - <%= button_to "Complete", complete_todo_path(@list.id, todo.id) %> </li>
+		<% end %>
+	</ul>
+
+<h3>Done</h3>
+	<ul>
+		<% @list.todos.completed.each do |todo| %>
+			<li><%= todo.description %></li>
+		<% end %>
+	</ul>
+
+<%= form_for [@list,@todo] do |form| %>
+
+<p><%= form.text_field :description %> <%= form.submit "Add Todo"%></p>
+<% end %>
 
 <%= link_to "Back to all lists", lists_path %>
