--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
 <h1>Home</h1>
 <p>Welcome to this app. Enjoy making lists, adding tasks, and crossing them out when you're done!</p>
+
+<% if user_signed_in? %>
+<%= render 'shared/todo_feed' %>
+<% end %>
+
