--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,7 @@
 	<div class="container">
 		<%= render 'layouts/header' %>
 		<section class="round">
-			<% flash.each do |key, value| %>
-				<%= content_tag(:div, value, :class => "flash #{key}") %>
-			<% end %>
+			<%= render 'layouts/flash_message' %>
 
 			<%= yield %>
 		</section>
